add new checkers
