# internal/api/proxychecker/check.go
@@ -5,6 +5,7 @@ import (
 
 	desc "github.com/atmxlab/proxychecker/gen/proto/api/proxychecker"
 	"github.com/atmxlab/proxychecker/internal/domain/vo/checker"
+	"github.com/atmxlab/proxychecker/internal/domain/vo/task"
 	"github.com/atmxlab/proxychecker/internal/service/command"
 	"github.com/atmxlab/proxychecker/pkg/errors"
 	"github.com/samber/lo"
@@ -14,20 +15,40 @@ func (s *Service) Check(ctx context.Context, req *desc.CheckRequest) (*desc.Chec
 	res, err := s.c.Commands().Check().Execute(ctx, command.CheckInput{
 		OperationTime: s.c.Entities().TimeProvider().CurrentTime(ctx),
 		Proxies:       req.GetProxies(),
-		Checkers: lo.Map(req.GetKinds(), func(item desc.CheckKind, _ int) checker.Kind {
-			m := map[desc.CheckKind]checker.Kind{
-				desc.CheckKind_CHECK_KIND_UNKNOWN: checker.KindUnknown,
-				desc.CheckKind_CHECK_KIND_GEO:     checker.KindGEO,
-				desc.CheckKind_CHECK_KIND_LATENCY: checker.KindLatency,
+		Checkers: lo.Map(req.GetKinds(), func(item *desc.CheckRequest_Kind, _ int) checker.KindWithPayload {
+			getKind := func() checker.Kind {
+				switch item.GetKind().(type) {
+				case *desc.CheckRequest_Kind_Geo_:
+					return checker.KindGEO
+				case *desc.CheckRequest_Kind_Latency_:
+					return checker.KindLatency
+				case *desc.CheckRequest_Kind_Url_:
+					return checker.KindURL
+				case *desc.CheckRequest_Kind_ExternalIp_:
+					return checker.KindExternalIP
+				default:
+					return checker.KindUnknown
+				}
 			}
 
-			return m[item]
+			getPayload := func() task.Payload {
+				switch v := item.GetKind().(type) {
+				case *desc.CheckRequest_Kind_Url_:
+					return task.Payload{
+						TargetURL: &task.TargetURL{URL: v.Url.GetUrl()},
+					}
+				default:
+					return task.NewEmptyPayload()
+				}
+			}
+
+			return checker.NewKindWithPayload(getPayload(), getKind())
 		}),
 	})
 	if err != nil {
 		return nil, errors.Wrap(err, "check.Execute")
 	}
-	
+
 	return &desc.CheckResponse{
 		GroupId: res.TaskGroupID.String(),
 	}, nil
